# pyrust

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: checks.yml
pyrust/: __init__.py
src/pyrust_alerycserrania/: __init__.py
tests/: test_option.py  test_result.py
